spec/9_token_length.txt
/sketch/sketch.ino: In function 'void loop()':
/sketch/sketch.ino:7:3: error: 'ddigitalWrite' was not declared in this scope
   ddigitalWrite(LED_BUILTIN, HIGH);
   ^~~~~~~~~~~~~
Error during build: build failed: exit status 1